--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "entropic-stellar-shooter",
+  "name": "western-duel",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "three": "^0.160.0",
-    "cannon-es": "^0.20.0"
-  },
   "devDependencies": {
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "three": "^0.160.0"
   }
 }
